--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,23 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+footer {
+  border: 100px;
+  margin-top: 20px;
+}
+
+.img {
+  width: auto;
+  height: 300px;
+  margin-top: 50px;
+  margin-bottom: 0px;
+  cursor: pointer;
+}
+
+.icon {
+  width: auto;
+  height: 75px;
+  margin-bottom: 50px;
+  cursor: pointer;
+}
