--- a/src/index.css
+++ b/src/index.css
@@ -17,10 +17,16 @@ footer {
   margin-top: 20px;
 }
 
+p {
+  margin: 10px;
+}
+
 .img {
   width: auto;
   height: 300px;
   margin-top: 50px;
+  margin-left: 50px;
+  margin-right: 50px;
   margin-bottom: 0px;
   cursor: pointer;
 }
